tra-la-la, mongol charge optional
